...
                android:layout_width="0dp"
                android:layout_height="62dp"
                android:layout_weight="1"
                android:text="@string/all_tasks" />

            <Button
                android:id="@+id/btnSetting"
                android:layout_width="0dp"
                android:layout_height="62dp"
                android:layout_weight="1"
                android:text="@string/setting" />
        </TableRow>

...
                android:layout_weight="1"
                android:text="@string/add_task" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/usernameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nothing"
        android:textSize="17sp" />

    <TextView
...
